5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1723_2508.log
== TEST (2019-05-14 10:12:04) 
-- CODE:
n = int(input("digite n: "))
cont = 1
n1 = 0
n2 = 0
n3 = 0
n4 = 0
sinal = 1
while(cont <= 1):
	fi = fi+ (n4/(n1*n2*n3))*sinal
	print(fi + 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    fi = fi+ (n4/(n1*n2*n3))*sinal
NameError: name 'fi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:12:09) 
-- CODE:
n = int(input("digite n: "))
cont = 1
n1 = 0
n2 = 0
n3 = 0
n4 = 0
sinal = 1
while(cont <= 1):
	fi = fi+ (n4/(n1*n2*n3))*sinal
	print(fi + 3)
-- EXECUTION TIME:
0.16166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2508/main.py", line 9, in <module>
    fi = fi+ (n4/(n1*n2*n3))*sinal
NameError: name 'fi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:12:11) 
-- CODE:
n = int(input("digite n: "))
cont = 1
n1 = 0
n2 = 0
n3 = 0
n4 = 0
sinal = 1
while(cont <= 1):
	fi = fi+ (n4/(n1*n2*n3))*sinal
	print(fi + 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    fi = fi+ (n4/(n1*n2*n3))*sinal
NameError: name 'fi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:12:21) 
-- CODE:
n = int(input("digite n: "))
cont = 1
n1 = 0
n2 = 0
n3 = 0
n4 = 0
sinal = 1
while(cont <= 1):
	fi = fi+ (n4/(n1*n2*n3))*sinal
	print(fi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    fi = fi+ (n4/(n1*n2*n3))*sinal
NameError: name 'fi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:12:49) 
-- CODE:
n = int(input("digite n: "))
cont = 1
n1 = 0
n2 = 0
n3 = 0
n4 = 0
sinal = 1
while(cont <= 1):
	cont = cont + (n4/(n1*n2*n3))*sinal
	print(fi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    cont = cont + (n4/(n1*n2*n3))*sinal
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:38:01) 
-- CODE:
n = int(input("digite n: "))
t = 1
x = 3
if (n==1):
	while (t < n):
		if (t%2 != 0):
			x = x+4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
			t = t+1
		else:
		x = x-4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
		t = t+1
print(round(x,8))
-- ERROR:
File "XXXX", line 8
    t = t+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:38:02) 
-- CODE:
n = int(input("digite n: "))
t = 1
x = 3
if (n==1):
	while (t < n):
		if (t%2 != 0):
			x = x+4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
			t = t+1
		else:
		x = x-4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
		t = t+1
print(round(x,8))
-- EXECUTION TIME:
0.133056
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 8
    t = t+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:38:03) 
-- CODE:
n = int(input("digite n: "))
t = 1
x = 3
if (n==1):
	while (t < n):
		if (t%2 != 0):
			x = x+4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
			t = t+1
		else:
		x = x-4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
		t = t+1
print(round(x,8))
-- ERROR:
File "XXXX", line 8
    t = t+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:38:59) 
-- CODE:
n = int(input("digite n: "))
t = 1
x = 3
if (n==1):
	x = 3
else:
	while (t < n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
		x = x-4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
		t = t+1
print(round(x,8))
-- ERROR:
File "XXXX", line 10
    t = t + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:36) 
-- CODE:
n = int(input("digite n: "))
t = 1
x = 3
if (n==1):
	x = 3
else:
	while (t < n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
		x = x - 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
		t = t + 1
print(round(x,8))
-- ERROR:
File "XXXX", line 12
    x = x - 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:40:38) 
-- CODE:
n = int(input("digite n: "))
t = 1
x = 3
if (n==1):
	x = 3
else:
	while (t < n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
		x = x - 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
		t = t + 1
print(round(x,8))
-- EXECUTION TIME:
0.206217
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 12
    x = x - 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:38) 
-- CODE:
n = int(input("digite n: "))
t = 1
x = 3
if (n==1):
	x = 3
else:
	while (t < n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
		x = x - 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
		t = t + 1
print(round(x,8))
-- ERROR:
File "XXXX", line 12
    x = x - 4/((2+2*(t-1))*(3+2*(t-1))*(4+2*(t-1)))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:56) 
-- CODE:
n = int(input("digite n: "))
t = 1
x = 3
if (n==1):
	x = 3
else:
	while (t < n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
		x = x - 4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
		t = t + 1
print(round(x,8))
-- ERROR:
File "XXXX", line 10
    t = t + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:40:58) 
-- CODE:
n = int(input("digite n: "))
t = 1
x = 3
if (n==1):
	x = 3
else:
	while (t < n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
		x = x - 4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
		t = t + 1
print(round(x,8))
-- EXECUTION TIME:
0.26587
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 10
    t = t + 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:59) 
-- CODE:
n = int(input("digite n: "))
t = 1
x = 3
if (n==1):
	x = 3
else:
	while (t < n):
		if (t%2 != 0):
			x = x + 4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
			t = t + 1
		else:
		x = x - 4/((2+2*(t-1)*(3+2*(t-1))*(4+2*(t-1)))
		t = t + 1
print(round(x,8))
-- ERROR:
File "XXXX", line 10
    t = t + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:46:38) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(1+1))*(4/((1*2)*(i*2+1)(1*2+2)))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:46:39) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(1+1))*(4/((1*2)*(i*2+1)(1*2+2)))
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.155716
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:46:40) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(1+1))*(4/((1*2)*(i*2+1)(1*2+2)))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:14) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)(i*2+2)))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:47:15) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)(i*2+2)))
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.226909
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:16) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)(i*2+2)))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:31) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)(2*i+2)))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:47:32) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)(2*i+2)))
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.177648
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:10) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2)))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:48:12) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2)))
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.135453
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:27) 
-- CODE:
n = int(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2)))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:41) 
-- CODE:
n = float(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2)))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:57) 
-- CODE:
n = float(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = (soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2))))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:02) 
-- CODE:
n = float(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = (soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2))))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:05) 
-- CODE:
n = float(input("digite n: "))
soma = 3
i = 1
fim = 0
while (i < fim):
	soma = (soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2))))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:14) 
-- CODE:
n = float(input("digite n: "))
soma = 3
i = 1
fim = n
while (i < fim):
	soma = (soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2))))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:16) 
-- CODE:
n = float(input("digite n: "))
soma = 3
i = 1
fim = n
while (i < fim):
	soma = (soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2))))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:04:16) 
-- CODE:
n = float(input("digite n: "))
soma = 3
i = 1
fim = n
while (i < fim):
	soma = (soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2))))
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.424581
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
digite n: 3.14155633
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:04:24) 
-- CODE:
n = float(input("digite n: "))
soma = 3
i = 1
fim = n
while (i < fim):
	soma = (soma + ((-1)**(i+1))*(4/((i*2)*(i*2+1)*(2*i+2))))
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.495862
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
